--- a/index.html
+++ b/index.html
@@ -36,16 +36,8 @@
     <h1>AniArt Gallery</h1>
     <p>Beautiful artwork with personal branding</p>
   </header>
-  <div class="gallery">
-    <img src="images/image1.jpg" alt="Artwork">
-    <img src="images/image2.jpg" alt="Artwork">
-    <img src="images/image3.jpg" alt="Artwork">
-    <img src="images/image4.jpg" alt="Artwork">
-    <img src="images/image5.jpg" alt="Artwork">
-    <img src="images/image6.jpg" alt="Artwork">
-    <img src="images/image7.jpg" alt="Artwork">
-    <img src="images/image8.jpg" alt="Artwork">
-    <img src="images/image9.jpg" alt="Artwork">
+  <div class="gallery>
+    
 
   </div>
 </body>
