--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AniArt Gallery</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff;
       margin: 0;
-      padding: 0;
+      background: #ffffff;
     }
     header {
       background: linear-gradient(to right, #4facfe, #00f2fe);
       color: white;
-      padding: 2rem;
+      padding: 2em;
       text-align: center;
     }
     .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 1rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 2em;
     }
     .gallery img {
-      width: 300px;
-      margin: 10px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
   </style>
 </head>
@@ -36,9 +34,11 @@
     <h1>AniArt Gallery</h1>
     <p>Beautiful artwork with personal branding</p>
   </header>
-  <div class="gallery>
-    
-
+  <div class="gallery">
+    <img src="image5.jpg" alt="Artwork">
+    <img src="image7.jpg" alt="Artwork">
+    <img src="image8.jpg" alt="Artwork">
+    <img src="image9.jpg" alt="Artwork">
   </div>
 </body>
 </html>
