--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <p>Beautiful artwork with personal branding</p>
   </header>
   <div class="gallery">
-    <img src="image5.jpg" alt="Artwork">
-    <img src="image7.jpg" alt="Artwork">
-    <img src="image8.jpg" alt="Artwork">
-    <img src="image9.jpg" alt="Artwork">
+    <img src="images/image5.jpg" alt="Artwork">
+    <img src="images/image7.jpg" alt="Artwork">
+    <img src="images/image8.jpg" alt="Artwork">
+    <img src="images/image9.jpg" alt="Artwork">
   </div>
 </body>
 </html>
