--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
     <img src="images/image7.jpg" alt="Artwork">
     <img src="images/image8.jpg" alt="Artwork">
     <img src="images/image9.jpg" alt="Artwork">
+    <div class="image-card">
+  <img src="images/image6.jpg" alt="Artwork">
+      <div class="image-card">
+  <img src="images/image4.jpg" alt="Artwork">
+        <div class="image-card">
+  <img src="images/image3.jpg" alt="Artwork">
+          <div class="image-card">
+  <img src="images/image2.jpg" alt="Artwork">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
