--- a/index.html
+++ b/index.html
@@ -6,26 +6,69 @@
   <title>AniArt Gallery</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background: #ffffff;
+      font-family: sans-serif;
+      background: #f7f9fa;
     }
     header {
       background: linear-gradient(to right, #4facfe, #00f2fe);
       color: white;
-      padding: 2em;
+      padding: 2rem;
       text-align: center;
+    }
+    .toggle {
+      text-align: center;
+      margin: 1rem 0;
+    }
+    .toggle button {
+      margin: 0 0.5rem;
+      padding: 0.5rem 1rem;
+      border: none;
+      background-color: #ddd;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    .toggle button.active {
+      background-color: #4facfe;
+      color: white;
+    }
+    .section {
+      padding: 1rem;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.3rem;
+      margin-top: 2rem;
     }
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-      padding: 2em;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+      margin-top: 1rem;
     }
-    .gallery img {
-      width: 100%;
+    .card {
+      position: relative;
+      background: white;
+      padding: 0.5rem;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .card img {
+      width: 100%;
+      display: block;
+      border-radius: 12px;
+    }
+    .logo-top {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 40px;
+    }
+    .logo-bottom {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 24px;
     }
   </style>
 </head>
@@ -34,23 +77,65 @@
     <h1>AniArt Gallery</h1>
     <p>Beautiful artwork with personal branding</p>
   </header>
-  <div class="gallery">
-    <img src="images/image5.jpg" alt="Artwork">
-    <img src="images/image7.jpg" alt="Artwork">
-    <img src="images/image8.jpg" alt="Artwork">
-    <img src="images/image9.jpg" alt="Artwork">
-    <div class="image-card">
-  <img src="images/image6.jpg" alt="Artwork">
-      <div class="image-card">
-  <img src="images/image4.jpg" alt="Artwork">
-        <div class="image-card">
-  <img src="images/image3.jpg" alt="Artwork">
-          <div class="image-card">
-  <img src="images/image2.jpg" alt="Artwork">
-          </div>
-        </div>
-      </div>
+
+  <div class="toggle">
+    <button class="active" onclick="showSection('free')">Free</button>
+    <button onclick="showSection('premium')">Premium</button>
+  </div>
+
+  <div id="free" class="section">
+    <h2>Free: Люди з тваринами і птахами</h2>
+    <div class="gallery">
+      <div class="card"><img src="images/image3.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+      <div class="card"><img src="images/image4.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+      <div class="card"><img src="images/image5.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+      <div class="card"><img src="images/image8.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+      <div class="card"><img src="images/image9.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+    </div>
+
+    <h2>Free: Люди з квітами</h2>
+    <div class="gallery">
+      <div class="card"><img src="images/image2.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+      <div class="card"><img src="images/image6.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+    </div>
+
+    <h2>Free: Картинки для дітей</h2>
+    <div class="gallery">
+      <div class="card"><img src="images/image7.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
     </div>
   </div>
+
+  <div id="premium" class="section" style="display: none;">
+    <h2>Premium: Люди з тваринами і птахами</h2>
+    <div class="gallery">
+      <!-- додаси свої зображення сюди -->
+    </div>
+
+    <h2>Premium: Люди з квітами</h2>
+    <div class="gallery">
+    </div>
+
+    <h2>Premium: Аватарки</h2>
+    <div class="gallery">
+    </div>
+
+    <h2>Premium: Заставки</h2>
+    <div class="gallery">
+    </div>
+
+    <h2>Premium: Картинки для дітей</h2>
+    <div class="gallery">
+    </div>
+  </div>
+
+  <script>
+    function showSection(name) {
+      document.getElementById("free").style.display = name === "free" ? "block" : "none";
+      document.getElementById("premium").style.display = name === "premium" ? "block" : "none";
+      const buttons = document.querySelectorAll(".toggle button");
+      buttons.forEach(btn => btn.classList.remove("active"));
+      document.querySelector(`.toggle button[onclick="showSection('${name}')"]`).classList.add("active");
+    }
+  </script>
 </body>
 </html>
