--- a/index.html
+++ b/index.html
@@ -1,74 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+
+      <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AniArt Gallery</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
-      font-family: sans-serif;
-      background: #f7f9fa;
+      background: #f0f0f0;
     }
     header {
       background: linear-gradient(to right, #4facfe, #00f2fe);
       color: white;
-      padding: 2rem;
       text-align: center;
+      padding: 2rem 1rem;
     }
-    .toggle {
+    .buttons {
       text-align: center;
-      margin: 1rem 0;
+      margin: 1rem;
     }
-    .toggle button {
-      margin: 0 0.5rem;
+    .buttons button {
       padding: 0.5rem 1rem;
+      margin: 0 0.5rem;
       border: none;
-      background-color: #ddd;
-      cursor: pointer;
       border-radius: 6px;
+      background-color: #e0e0e0;
+      cursor: pointer;
     }
-    .toggle button.active {
-      background-color: #4facfe;
+    .buttons button.active {
+      background-color: #2196f3;
       color: white;
     }
     .section {
-      padding: 1rem;
+      margin: 2rem;
     }
-    h2 {
+    .section h2 {
       border-bottom: 2px solid #ccc;
-      padding-bottom: 0.3rem;
-      margin-top: 2rem;
+      padding-bottom: 0.5rem;
     }
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1rem;
-      margin-top: 1rem;
     }
-    .card {
-      position: relative;
-      background: white;
-      padding: 0.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .card img {
+    .gallery img {
       width: 100%;
-      display: block;
-      border-radius: 12px;
+      border-radius: 10px;
     }
-    .logo-top {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 40px;
-    }
-    .logo-bottom {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      width: 24px;
+    .caption {
+      margin-top: 0.25rem;
+      text-align: center;
     }
   </style>
 </head>
@@ -76,66 +58,97 @@
   <header>
     <h1>AniArt Gallery</h1>
     <p>Beautiful artwork with personal branding</p>
-  </header>
-
-  <div class="toggle">
-    <button class="active" onclick="showSection('free')">Free</button>
-    <button onclick="showSection('premium')">Premium</button>
-  </div>
-
-  <div id="free" class="section">
-    <h2>Free: Люди з тваринами і птахами</h2>
-    <div class="gallery">
-      <div class="card"><img src="images/image3.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-      <div class="card"><img src="images/image4.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-      <div class="card"><img src="images/image5.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-      <div class="card"><img src="images/image8.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-      <div class="card"><img src="images/image9.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
+  </header>  <div class="buttons">
+    <button id="freeBtn" class="active" onclick="showSection('free')">Free</button>
+    <button id="premiumBtn" onclick="showSection('premium')">Premium</button>
+  </div>  <div id="freeSection">
+    <div class="section">
+      <h2>Free: People with Animals and Birds</h2>
+      <div class="gallery">
+        <div>
+          <img src="images/image3.jpg" alt="Girl with cat" />
+          <div class="caption">Girl with cat</div>
+        </div>
+        <div>
+          <img src="images/image4.jpg" alt="Woman feeding pandas" />
+          <div class="caption">Woman feeding pandas</div>
+        </div>
+        <div>
+          <img src="images/image5.jpg" alt="Girl with butterflies and birds" />
+          <div class="caption">Girl with butterflies and birds</div>
+        </div>
+        <div>
+          <img src="images/image8.jpg" alt="Girl riding bicycle" />
+          <div class="caption">Girl riding bicycle</div>
+        </div>
+        <div>
+          <img src="images/image9.jpg" alt="Girl with a dog" />
+          <div class="caption">Girl with a dog</div>
+        </div>
+      </div>
+    </div><div class="section">
+  <h2>Free: People with Flowers</h2>
+  <div class="gallery">
+    <div>
+      <img src="images/image2.jpg" alt="Woman with girls in garden" />
+      <div class="caption">Woman with girls in garden</div>
     </div>
-
-    <h2>Free: Люди з квітами</h2>
-    <div class="gallery">
-      <div class="card"><img src="images/image2.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-      <div class="card"><img src="images/image6.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-    </div>
-
-    <h2>Free: Картинки для дітей</h2>
-    <div class="gallery">
-      <div class="card"><img src="images/image7.jpg"><img class="logo-top" src="images/logo-an.png"><img class="logo-bottom" src="images/logo-tulip.png"></div>
-    </div>
-  </div>
-
-  <div id="premium" class="section" style="display: none;">
-    <h2>Premium: Люди з тваринами і птахами</h2>
-    <div class="gallery">
-      <!-- додаси свої зображення сюди -->
-    </div>
-
-    <h2>Premium: Люди з квітами</h2>
-    <div class="gallery">
-    </div>
-
-    <h2>Premium: Аватарки</h2>
-    <div class="gallery">
-    </div>
-
-    <h2>Premium: Заставки</h2>
-    <div class="gallery">
-    </div>
-
-    <h2>Premium: Картинки для дітей</h2>
-    <div class="gallery">
+    <div>
+      <img src="images/image6.jpg" alt="Girl in lavender field" />
+      <div class="caption">Girl in lavender field</div>
     </div>
   </div>
+</div>
 
-  <script>
-    function showSection(name) {
-      document.getElementById("free").style.display = name === "free" ? "block" : "none";
-      document.getElementById("premium").style.display = name === "premium" ? "block" : "none";
-      const buttons = document.querySelectorAll(".toggle button");
-      buttons.forEach(btn => btn.classList.remove("active"));
-      document.querySelector(`.toggle button[onclick="showSection('${name}')"]`).classList.add("active");
+<div class="section">
+  <h2>Free: Illustrations for Children</h2>
+  <div class="gallery">
+    <div>
+      <img src="images/image7.jpg" alt="Children in a field" />
+      <div class="caption">Children in a field</div>
+    </div>
+  </div>
+</div>
+
+  </div>  <div id="premiumSection" style="display:none">
+    <div class="section">
+      <h2>Premium: People with Animals and Birds</h2>
+      <p>Coming soon...</p>
+    </div>
+    <div class="section">
+      <h2>Premium: People with Flowers</h2>
+      <p>Coming soon...</p>
+    </div>
+    <div class="section">
+      <h2>Premium: Avatars</h2>
+      <p>Coming soon...</p>
+    </div>
+    <div class="section">
+      <h2>Premium: Wallpapers</h2>
+      <p>Coming soon...</p>
+    </div>
+    <div class="section">
+      <h2>Premium: Illustrations for Children</h2>
+      <p>Coming soon...</p>
+    </div>
+  </div>  <script>
+    function showSection(section) {
+      const freeBtn = document.getElementById('freeBtn');
+      const premiumBtn = document.getElementById('premiumBtn');
+      const freeSection = document.getElementById('freeSection');
+      const premiumSection = document.getElementById('premiumSection');
+
+      if (section === 'free') {
+        freeBtn.classList.add('active');
+        premiumBtn.classList.remove('active');
+        freeSection.style.display = 'block';
+        premiumSection.style.display = 'none';
+      } else {
+        freeBtn.classList.remove('active');
+        premiumBtn.classList.add('active');
+        freeSection.style.display = 'none';
+        premiumSection.style.display = 'block';
+      }
     }
-  </script>
-</body>
-</html>
+  </script></body>
+      </html>
