--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
   <div id="premium" class="section">
     <h2>People with Animals and Birds</h2>
     <div class="gallery">
-      <div class="gallery-item">
-        <img src="premium_girl_with_husky_watermarked.png" alt="Girl with a husky">
+      <div class="gallery-item"
         <p>Girl with a husky</p>
         <a href="premium_inline.html">
           <button class="view-button">View</button>
@@ -133,4 +132,4 @@
   </script>
 </body>
 </html>
-<img src="premium_girl_with_husky_watermarked.png" alt="Girl with a husky">
+
