--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
     <h2>People with Animals and Birds</h2>
     <div class="gallery">
       <div class="gallery-item"
-        <p>Girl with a husky</p>
+        <img src="premium_girl_with_husky_watermarked.jpg" alt="Girl with a husky">
+
         <a href="premium_inline.html">
           <button class="view-button">View</button>
         </a>
